# Tutorial-MCP-Crash-Course

./: README.md
langchain-mcp-adapters/: Dockerfile  README.md  multistage.Dockerfile  pyproject.toml  run.sh
langchain-mcp-adapters/src/: langchain_client.py  main.py
langchain-mcp-adapters/src/servers/: math_server.py  weather_server.py
mcpserver/: README.md  dockerfile  mkdocs.yml  pyproject.toml  run.sh
mcpserver/src/mcp_server_example/: __init__.py  resource.py  server.py
